<resources>
    <string name="app_name">TesteRiscoCardiaco</string>
    <string name="ol_essa_uma_avalia_o_r_pida_de_risco_card_aco_vamos_come_ar">Olá, essa é uma avaliação rápida de risco cardíaco, vamos começar?</string>
    <string name="next">next</string>
    <string name="_10_a_20_anos">10 a 20 anos</string>
    <string name="_31_a_40_anos">31 a 40 anos</string>
    <string name="acima_de_61_anos">Acima de 61 anos</string>
    <string name="_51_a_60_anos">51 a 60 anos</string>
    <string name="_41_a_50_anos">41 a 50 anos</string>
    <string name="_21_a_30_anos">21 a 30 anos</string>
    <string name="vamos_come_ar_por_sua_idade">Vamos começar por sua idade</string>
    <string name="esfor_o_profissional_e_recreativo_intenso">Esforço profissional e recreativo intenso</string>
    <string name="atividade">Atividade</string>
    <string name="esfor_o_profissional_e_recreativo_moderado">Esforço profissional e recreativo moderado</string>
    <string name="trabalho_sedent_rio_e_recreativo_intenso">Trabalho sedentário e recreativo intenso</string>
    <string name="trabalho_sedent_rio_e_recreativo_moderado">Trabalho sedentário e recreativo moderado</string>
    <string name="trabalho_sedent_rio_e_recreativo_leve">Trabalho sedentário e recreativo leve</string>
    <string name="aus_ncia_completa_de_qualquer_exercicio">Ausência completa de qualquer exercicio</string>
    <string name="abaixo_de_180_ou_a_dieta_n_o_cont_m_gorduras_animais">Abaixo de 180 ou a dieta não contém gorduras animais</string>
    <string name="colesterol">Colesterol</string>
    <string name="de_181_a_205_ou_a_dieta_cont_m_10_de_gorduras_animais">De 181 a 205 ou a dieta contém 10% de gorduras animais</string>
    <string name="de_206_a_230_ou_a_dieta_cont_m_20_de_gorduras_animais">De 206 a 230 ou a dieta contém 20% de gorduras animais</string>
    <string name="de_231_a_255_ou_a_dieta_cont_m_30_de_gorduras_animais">De 231 a 255 ou a dieta contém 30% de gorduras animais</string>
    <string name="de_256_a_280_ou_a_dieta_cont_m_40_de_gorduras_animais">De 256 a 280 ou a dieta contém 40% de gorduras animais</string>
    <string name="acima_de_281_ou_a_dieta_cont_m_50_de_gorduras_animais">Acima de 281 ou a dieta contém 50% de gorduras animais</string>
    <string name="risco_muito_alto_41_a_62">RISCO MUITO ALTO - 41 a 62</string>
    <string name="risco_alto_32_a_40">RISCO ALTO - 32 a 40</string>
    <string name="risco_moderado_25_a_31">RISCO MODERADO - 25 a 31</string>
    <string name="risco_medio_18_a_24">RISCO MEDIO - 18 a 24</string>
    <string name="tt">TT</string>
    <string name="sua_pontua_o_foi">SUA PONTUAÇÃO FOI :</string>
    <string name="sem_risco_6_a_11">SEM RISCO - 6 a 11</string>
    <string name="risco_abaixo_da_m_dia_12_a_17">RISCO ABAIXO DA MÉDIA - 12 a 17</string>
    <string name="feminino_de_40_a_50_anos">Feminino de 40 a 50 anos</string>
    <string name="masculino_de_baixa_estatura_e_calvo">Masculino de baixa estatura e calvo</string>
    <string name="masculino_de_baixa_estatura">Masculino de baixa estatura</string>
    <string name="masculino">Masculino</string>
    <string name="feminino_com_mais_de_50_anos">Feminino com mais de 50 anos</string>
    <string name="g_nero">Gênero</string>
    <string name="feminino_c_menos_de_40_anos">Feminino c/ menos de 40 anos</string>
    <string name="_3_parente_com_doen_a_card_aca_de_60_anos">3 parente com doença cardíaca - de 60 anos</string>
    <string name="_2_parente_com_doen_a_card_aca_de_60_anos">2 parente com doença cardíaca - de 60 anos</string>
    <string name="_1_parente_com_doen_a_card_aca_de_60_anos">1 parente com doença cardíaca - de 60 anos</string>
    <string name="_2_parentes_com_doen_a_card_aca_de_60_anos">2 parentes com doença cardíaca + de 60 anos</string>
    <string name="_1_parente_com_doen_a_card_aca__de_60_anos">1 parente com doença cardíaca + de 60 anos</string>
    <string name="doen_as_na_familia">Doenças na familia</string>
    <string name="nenhum_hist_rico_de_cardiopatia">Nenhum histórico de cardiopatia</string>
    <string name="sist_lica_de_200_mmhg_ou_mais">Sistólica de 200 mmhg ou mais</string>
    <string name="sist_lica_de_180_a_199_mmhg">Sistólica de 180 a 199 mmhg</string>
    <string name="sist_lica_de_160_a_179_mmhg">Sistólica de 160 a 179 mmhg</string>
    <string name="sist_lica_de_140_a_159_mmhg">Sistólica de 140 a 159 mmhg</string>
    <string name="sist_lica_de_120_a_139_mmhg">Sistólica de 120 a 139 mmhg</string>
    <string name="press_o">Pressão</string>
    <string name="sist_lica_de_100_a_119_mmhg">Sistólica de 100 a 119 mmhg</string>
    <string name="mais_de_31_cigarros_por_dia">Mais de 31 cigarros por dia</string>
    <string name="_21_a_30_cigarros_por_dia">21 a 30 cigarros por dia</string>
    <string name="_11_a_20_cigarros_por_dia">11 a 20 cigarros por dia</string>
    <string name="_10_cigarros_ou_menos_por_dia">10 cigarros ou menos por dia</string>
    <string name="charuto_e_ou_cachimbo">Charuto e/ou cachimbo</string>
    <string name="fumo">Fumo</string>
    <string name="n_o_fumante">Não fumante</string>
    <string name="mais_de_23kg_acima_do_peso_normal">Mais de 23kg acima do peso normal</string>
    <string name="de_16_a_22_9kg_acima_do_peso_normal">De 16 a 22,9kg acima do peso normal</string>
    <string name="de_9_1_a_15_9kg_acima_do_peso_normal">De 9,1 a 15,9kg acima do peso normal</string>
    <string name="de_2_4_a_9kg_acima_do_peso_normal">De 2,4 a 9kg acima do peso normal</string>
    <string name="menos_de_2_3_a_mais_de_2_3kg_do_peso_normal">Menos de 2,3 a mais de 2,3kg do peso normal</string>
    <string name="peso">Peso</string>
    <string name="inferior_a_2_3kg_do_peso_normal">Inferior a 2,3kg do peso normal</string>
</resources>