<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeightActivity">

    <Button
        android:id="@+id/btn_w_01"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#30F306"
        android:rotation="-10"
        android:rotationY="12"
        android:text="@string/inferior_a_2_3kg_do_peso_normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_weight" />

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/peso"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_w_02"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#7DCD1F"
        android:rotation="-10"
        android:rotationY="12"
        android:text="@string/menos_de_2_3_a_mais_de_2_3kg_do_peso_normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_w_01"
        app:layout_constraintStart_toStartOf="@+id/btn_w_01"
        app:layout_constraintTop_toBottomOf="@+id/btn_w_01" />

    <Button
        android:id="@+id/btn_w_03"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#DABE31"
        android:rotation="-10"
        android:rotationY="11"
        android:text="@string/de_2_4_a_9kg_acima_do_peso_normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_w_02"
        app:layout_constraintStart_toStartOf="@+id/btn_w_02"
        app:layout_constraintTop_toBottomOf="@+id/btn_w_02" />

    <Button
        android:id="@+id/btn_w_04"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFB803"
        android:rotation="-10"
        android:rotationY="11"
        android:text="@string/de_9_1_a_15_9kg_acima_do_peso_normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_w_03"
        app:layout_constraintStart_toStartOf="@+id/btn_w_03"
        app:layout_constraintTop_toBottomOf="@+id/btn_w_03" />

    <Button
        android:id="@+id/btn_w_05"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F16C06"
        android:rotation="-10"
        android:rotationY="10"
        android:text="@string/de_16_a_22_9kg_acima_do_peso_normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_w_04"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_w_04"
        app:layout_constraintTop_toBottomOf="@+id/btn_w_04" />

    <Button
        android:id="@+id/btn_w_06"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FD0303"
        android:rotation="-10"
        android:rotationY="10"
        android:text="@string/mais_de_23kg_acima_do_peso_normal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_w_05"
        app:layout_constraintStart_toStartOf="@+id/btn_w_05"
        app:layout_constraintTop_toBottomOf="@+id/btn_w_05" />



</androidx.constraintlayout.widget.ConstraintLayout>