<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmokeActivity">

    <Button
        android:id="@+id/btn_smoke_01"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#30F306"
        android:rotation="-10"
        android:rotationY="12"
        android:text="@string/n_o_fumante"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_smoke" />

    <TextView
        android:id="@+id/text_smoke"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/fumo"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="38sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_smoke_02"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#7DCD1F"
        android:rotation="-10"
        android:rotationY="12"
        android:text="@string/charuto_e_ou_cachimbo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_smoke_01"
        app:layout_constraintStart_toStartOf="@+id/btn_smoke_01"
        app:layout_constraintTop_toBottomOf="@+id/btn_smoke_01" />

    <Button
        android:id="@+id/btn_smoke_03"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#DABE31"
        android:rotation="-10"
        android:rotationY="11"
        android:text="@string/_10_cigarros_ou_menos_por_dia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_smoke_02"
        app:layout_constraintStart_toStartOf="@+id/btn_smoke_02"
        app:layout_constraintTop_toBottomOf="@+id/btn_smoke_02" />

    <Button
        android:id="@+id/btn_smoke_04"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFB803"
        android:rotation="-10"
        android:rotationY="11"
        android:text="@string/_11_a_20_cigarros_por_dia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_smoke_03"
        app:layout_constraintStart_toStartOf="@+id/btn_smoke_03"
        app:layout_constraintTop_toBottomOf="@+id/btn_smoke_03" />

    <Button
        android:id="@+id/btn_smoke_05"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F16C06"
        android:rotation="-10"
        android:rotationY="10"
        android:text="@string/_21_a_30_cigarros_por_dia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_smoke_04"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_smoke_04"
        app:layout_constraintTop_toBottomOf="@+id/btn_smoke_04" />

    <Button
        android:id="@+id/btn_smoke_06"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FD0303"
        android:rotation="-10"
        android:rotationY="10"
        android:text="@string/mais_de_31_cigarros_por_dia"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_smoke_05"
        app:layout_constraintStart_toStartOf="@+id/btn_smoke_05"
        app:layout_constraintTop_toBottomOf="@+id/btn_smoke_05" />

</androidx.constraintlayout.widget.ConstraintLayout>