<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneroActivity" >

    <Button
        android:id="@+id/btn_genre_01"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#30F306"
        android:rotation="-10"
        android:rotationY="12"
        android:text="@string/feminino_c_menos_de_40_anos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_genre" />

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="cursive"
        android:text="@string/g_nero"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_genre_02"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#7DCD1F"
        android:rotation="-10"
        android:rotationY="12"
        android:text="@string/feminino_de_40_a_50_anos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_genre_01"
        app:layout_constraintStart_toStartOf="@+id/btn_genre_01"
        app:layout_constraintTop_toBottomOf="@+id/btn_genre_01" />

    <Button
        android:id="@+id/btn_genre_03"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#DABE31"
        android:rotation="-10"
        android:rotationY="11"
        android:text="@string/feminino_com_mais_de_50_anos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_genre_02"
        app:layout_constraintStart_toStartOf="@+id/btn_genre_02"
        app:layout_constraintTop_toBottomOf="@+id/btn_genre_02" />

    <Button
        android:id="@+id/btn_genre_04"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FFB803"
        android:rotation="-10"
        android:rotationY="11"
        android:text="@string/masculino"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_genre_03"
        app:layout_constraintStart_toStartOf="@+id/btn_genre_03"
        app:layout_constraintTop_toBottomOf="@+id/btn_genre_03" />

    <Button
        android:id="@+id/btn_genre_05"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#F16C06"
        android:rotation="-10"
        android:rotationY="10"
        android:text="@string/masculino_de_baixa_estatura"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_genre_04"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_genre_04"
        app:layout_constraintTop_toBottomOf="@+id/btn_genre_04" />

    <Button
        android:id="@+id/btn_genre_06"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#FD0303"
        android:rotation="-10"
        android:rotationY="10"
        android:text="@string/masculino_de_baixa_estatura_e_calvo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_genre_05"
        app:layout_constraintStart_toStartOf="@+id/btn_genre_05"
        app:layout_constraintTop_toBottomOf="@+id/btn_genre_05" />

</androidx.constraintlayout.widget.ConstraintLayout>